# Graph

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  runBuild.py
.github/workflows/: build.yml
Examples/: Basic.cxx  BreadthFirstIterator.cxx  CMakeLists.txt  DepthFirstIterator.cxx  Iterator.cxx
Include/: Edge.hpp  Graph.hpp  Node.hpp
examples/: Basic.cxx  CMakeLists.txt  Dijkstra.cxx  HasNegativeCycle.cxx  IsCyclic.cxx  Iterator.cxx  MotherNode.cxx  NumOfPaths.cxx  SerializeDeserialize.cxx
include/: _deserialize.hpp  _dijkstra.hpp  _graph_impl.hpp  _graph_iterator.hpp  _has_negative_cycle.hpp  _mother_node.hpp  _node_impl.hpp  _node_iterator.hpp  _serialize.hpp  _widgets_impl.hpp  edge.hpp  graph.hpp  node.hpp  widgets.hpp
include/core/: graph.hpp  widgets.hpp
include/impl/: _is_cyclic.hpp  _node_iterator.hpp  _num_of_paths.hpp  _widgets.hpp
single-header/: graph.hpp
tests/: Algorithms.hpp  CMakeLists.txt  Gmain.cxx
